--- a/style.css
+++ b/style.css
@@ -1,5 +1,54 @@
+
+header h1{
+  text-align: center;
+}
+nav{
+  text-align:center;
+
+}
+nav a{
+  padding-left: 10px;
+
+  background-color:gray;
+}
+figcaption{
+  text-align: center;
+  font-size: 10px;
+}
+
+figure ~p{
+
+  margin-right: 300px;
+  margin-left: 300px;
+}
+
+
+
 body {
   width: 100%;
   height: 100%;
   margin: 0;
 }
+#featured-property{
+  text-align: center;
+  margin: auto;
+}
+
+section div{
+  background-color: red;
+  float: left;
+  display: block;
+  width: 25%;
+  text-align: center;
+
+}
+section h3{
+  text-align: center;
+
+
+  list-style: none;
+  margin: 0;
+  padding: 0;
+
+}
+
